# Agentic-rag-personal-chat-system

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Dockerfile.ingestion  Makefile  README.md  config.yaml  docker-compose.yaml  docker-run.sh  main.py  pyproject.toml  run.sh
.devcontainer/backend/: devcontainer.json
.devcontainer/ingestion/: devcontainer.json
.github/workflows/: ci_cd.yaml
backend/: Dockerfile
ingestion/: Dockerfile  pyproject.toml
ingestion/src/: run_ingestion.py
src/agentic_rag_personal_chat_system/backend/src/: graph.py
src/agentic_rag_personal_chat_system/backend/src/agents/: base_agent.py  personal_assistant.py  technical_assistant.py
src/agentic_rag_personal_chat_system/backend/src/api/: models.py  router.py
src/agentic_rag_personal_chat_system/backend/src/config/: agent_config.py  backend_config.py  llm_config.py
src/agentic_rag_personal_chat_system/backend/src/llm/: huggingface_llm.py
src/agentic_rag_personal_chat_system/backend/src/retrieval/: retriever.py
src/agentic_rag_personal_chat_system/configs/: config_factory.py
src/agentic_rag_personal_chat_system/frontend/src/: README.md
src/agentic_rag_personal_chat_system/ingestion/src/component/: qdrant_db_client.py  run_ingestion.py  strategy.py
src/agentic_rag_personal_chat_system/ingestion/src/main_utils/: utils.py
src/agentic_rag_personal_chat_system/utils/: common.py
src/configs/: qdrant_config.py
src/ingestion/src/: config.py  run_ingestion.py
src/ingestion/src/component/: qdrant_db_client.py  run_ingestion.py
src/models/: base.py
